feat: add domain-driven design code and the one related to i18n and routing.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,7 +2,8 @@
   "option": {
     "home": "Home",
     "about": "About",
-    "categories": "Categories"
+    "categories": "Categories",
+    "tutorials": "Tutorials"
   },
   "authoring-phrase": {
     "intro": "Made with",
@@ -21,5 +22,43 @@
     "title": "Page Not Found",
     "content": "The path {unavailable-route} is not available.",
     "go-home": "Go Home"
+  },
+  "categories": {
+    "title": "Categories",
+    "id": "ID",
+    "name": "Name",
+    "actions": "Actions",
+    "new": "New Category",
+    "confirm-delete": "Are you sure you want to delete {name}?",
+    "delete-header": "Confirm Deletion"
+  },
+  "category": {
+    "new-title": "Create New Category",
+    "edit-title": "Edit Category",
+    "name": "Name",
+    "save": "Save",
+    "cancel": "Cancel"
+  },
+  "tutorials": {
+    "title": "Tutorials",
+    "id": "ID",
+    "summary": "Summary",
+    "category-id": "Category ID",
+    "actions": "Actions",
+    "new": "New Tutorial",
+    "confirm-delete": "Are you sure you want to delete {title}?",
+    "delete-header": "Confirm Deletion"
+  },
+  "tutorial": {
+    "new-title": "Create New Tutorial",
+    "edit-title": "Edit Tutorial",
+    "title": "Title",
+    "summary": "Summary",
+    "category": "Category",
+    "save": "Save",
+    "cancel": "Cancel"
+  },
+  "errors": {
+    "occurred": "Errors occurred"
   }
 }
