--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -2,7 +2,8 @@
   "option": {
     "home": "Inicio",
     "about": "Acerca de",
-    "categories": "Categorías"
+    "categories": "Categorías",
+    "tutorials": "Tutoriales"
   },
   "authoring-phrase": {
     "intro": "Hecho con",
@@ -21,5 +22,43 @@
     "title": "Página no encontrada",
     "content": "La ruta {unavailable-route} no está disponible.",
     "go-home": "Ir al Inicio"
+  },
+  "categories": {
+    "title": "Categorías",
+    "id": "ID",
+    "name": "Nombre",
+    "actions": "Acciones",
+    "new": "Nueva Categoría",
+    "confirm-delete": "¿Estás seguro de que quieres eliminar {name}?",
+    "delete-header": "Confirmar Eliminación"
+  },
+  "category": {
+    "new-title": "Crear Nueva Categoría",
+    "edit-title": "Editar Categoría",
+    "name": "Nombre",
+    "save": "Guardar",
+    "cancel": "Cancelar"
+  },
+  "tutorials": {
+    "title": "Tutoriales",
+    "id": "ID",
+    "summary": "Resumen",
+    "category-id": "ID de Categoría",
+    "actions": "Acciones",
+    "new": "Nuevo Tutorial",
+    "confirm-delete": "¿Estás seguro de que quieres eliminar {title}?",
+    "delete-header": "Confirmar Eliminación"
+  },
+  "tutorial": {
+    "new-title": "Crear Nuevo Tutorial",
+    "edit-title": "Editar Tutorial",
+    "title": "Título",
+    "summary": "Resumen",
+    "category": "Categoría",
+    "save": "Guardar",
+    "cancel": "Cancelar"
+  },
+  "errors": {
+    "occurred": "Ocurrieron errores"
   }
 }
